# crates/limit-agents/Cargo.toml
[package]
name = "limit-agents"
version = "2.4.1"
edition = "2025"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
limit-core = { path = "../limit-core" }
