# crates/limit-muisqa/Cargo.toml
# Multi-Intent Information Seeking Question Answering (MuISQA) integration

[package]
name = "limit-muisqa"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
limit-core = { path = "../limit-core" }
limit-storage = { path = "../limit-storage" }
limit-orchestration = { path = "../limit-orchestration" }
limit-agents = { path = "../limit-agents" }

# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true

# Additional dependencies for MuISQA
csv = "1.3"
rand = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[[bin]]
name = "muisqa-demo"
path = "src/main.rs"
