# crates/limit-storage/Cargo.toml
# Storage layer with provenance and governance

[package]
name = "limit-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
limit-core = { path = "../limit-core" }

# Database backends
sled = "0.34"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "postgres", "uuid", "chrono", "json"], optional = true }

[features]
default = []
sqlite = ["sqlx"]
postgres = ["sqlx"]
all-databases = ["sqlite", "postgres"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
